# relife

./: .buildinfo  .gitignore  AUTHORS.txt  CONTRIBUTING.md  CRITICAL_TESTS.py  HOW_TO_CONTRIBUTE.md  MANIFEST.in  README.html  README.md  README.rst  basics.html  contributions.html  debug_gompertz_variance.py  developpers.html  genindex.html  index.html  install.html  installation.html  modules.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  pytest.toml  relife.html  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  test_combined_models.py  test_combined_models_detailed.py  test_comprehensive_combined_models.py  test_gompertz_fix.py  validate_diagnosis.py
_autosummary/: relife.data.CountData.html  relife.data.LifetimeData.html  relife.data.RenewalData.html  relife.data.RenewalRewardData.html  relife.data.ReplacementPolicyData.html  relife.data.html  relife.datasets.html  relife.datasets.load_circuit_breaker.html  relife.datasets.load_insulator_string.html  relife.datasets.load_power_transformer.html  relife.discounting.Discount.html  relife.discounting.ExponentialDiscounting.html  relife.discounting.GeneralizedHyperbolicDiscounting.html  relife.discounting.HyperbolicDiscounting.html  relife.discounting.html  relife.distribution.Exponential.html  relife.distribution.Gamma.html  relife.distribution.Gompertz.html  relife.distribution.LogLogistic.html  relife.distribution.MinimumDistribution.html  relife.distribution.ParametricLifetimeDistribution.html  relife.distribution.Weibull.html  relife.distribution.html  relife.html  relife.model.AbsolutelyContinuousLifetimeModel.html  relife.model.AgeReplacementModel.html  relife.model.EquilibriumDistribution.html  relife.model.HazardFunctions.html  relife.model.LeftTruncated.html  relife.model.LifetimeModel.html  relife.model.html  relife.nonparametric.ECDF.html  relife.nonparametric.KaplanMeier.html  relife.nonparametric.NelsonAalen.html  relife.nonparametric.html  relife.parametric.FittingResult.html  relife.parametric.ParametricHazardFunctions.html  relife.parametric.ParametricLifetimeModel.html  relife.parametric.html  relife.regression.AFT.html  (+28 more)
_modules/: index.html
_sources/: README.rst.txt  basics.rst.txt  contributions.rst.txt  index.rst.txt  installation.rst.txt
_static/css/: custom.css
api/: core_module.html  data_module.html  datasets_module.html  generator_module.html  index.html  lifetime_model.html  user_api.html
basic/: index.html
basics/: get_started_example.html  index.html
contributor_guide/: about_integration.html  about_lifetime_models.html  about_numpy.html  about_stochastic_process.html  additional_lectures.html  development_env.html  index.html  your_profile.html
data/: load.py  power_transformer.csv
datasets/: __init__.py  input_turnbull.csv  load.py
developer/: index.html
developper/: index.html
docs/: conf.py  details.md  how_to_contribute.md  how_to_use.md  in_a_nutshell.md  modules.rst  relife.rst  requirements.txt
examples/: data_examples.ipynb
for_developers/: index.html
future/: index.html
get_started/: get_started_example.html  get_started_example.ipynb  index.html  installation.html
learn/: index.html  lifetime_data.html
relife/: __init__.py  __init__.pyi  _args.py  _base.py  _freeze.py  _io_types.pyi  _plot.py  _plots.py  _quadrature.py  _typing.py  _typing.pyi  base.py  base.pyi  composition.py  conftest.py  costs.py  data.py  datasets.py  descriptors.py  discounting.py  distribution.py  distributions.py  economic.py  gamma_process.py  generator.py  model.py  non_parametric_model.py  nonparametric.py  nonparametric_model.py  nonparametrics.py  parametric.py  plots.py  poisson_process.py  quadrature.py  quadratures.py  regression.py  renewal.py  renewal_process.py  replacement_policy.py  reward.py  (+6 more)
relife2/: __init__.py  addons.py  core.py  data.py  dataset.py  discount.py  distribution.py  distributions.py  docstring.py  estimators.py  functions.py  gammaprocess.py  io.py  lifetime_models.py  likelihoods.py  model.py  models.py  nhpp.py  nonparametric.py  parametric.py  policy.py  probabilities.py  protocols.py  regression.py  regressions.py  renewalprocess.py  reward.py  stochastic_process.py  stochasticprocess.py  types.py  typing.py
test/: conftest.py  data_factories_test.py  distibutions_test.py  failure_data_sample_test.py  lifetimedata_factories_test.py  ls_integrate_test.py  nonparametric_test.py  quadrature_test.py  regressions_test.py  renewal_process_test.py  replacement_policy_test.py  shape_test.py  test_economic.py  test_lifetime_data.py  test_lifetime_likelihood.py  test_parametric_model.py  test_quadrature.py  to_fit_test.py  to_fit_test_nhpp.py
tests/: __init__.py  data_factories_test.py  distibutions_test.py  distri_model_test.py  lifetimedata_factories_test.py  measures_factories_test.py  nonparametric_test.py  object_data_test.py  parser_data_test.py  regressions_test.py  renewal_process_test.py  replacement_policy_test.py  survival_data_test.py  test_data.py  test_distribution.py  test_gamma_process.py  test_nonparametric.py  test_regression.py  test_renewal_process.py  test_replacement_policy.py
user/: about_numpy.html  index.html  lifetime_distributions.html  lifetime_distributions.ipynb  lifetime_model.html  lifetime_model.ipynb  lifetime_regressions.html  lifetime_regressions.ipynb  non_parametric_lifetime_models.html  non_parametric_lifetime_models.ipynb  policies.html  policies.ipynb  semiparametric_regression.html  stochastic_processes.html  stochastic_processes.ipynb
user_guide/: demo_distribution.html  demo_distribution.ipynb  demo_financial_analysis.html  demo_financial_analysis.ipynb  demo_nonparametric.html  demo_nonparametric.ipynb  demo_regression.html  demo_regression.ipynb  demo_renewal_theory.html  index.html  lifetime_model.html  policies.html  stochastic_processes.html
user_guides/: about_numpy.html  index.html  lifetime_distributions.html  lifetime_regressions.html  lifetime_regressions.ipynb  non_parametric_lifetime_models.html  semiparametric_regression.html  (+1 more)
(+1241 files in other folders)
