[build-system] # see setuptools quickstart
requires = ["setuptools >= 59.6.0"]
build-backend = "setuptools.build_meta"

# to build and publish see https://packaging.python.org/en/latest/tutorials/packaging-projects/

[project]
name = "relife"
version = "2.0.2"
authors = [
	{name = "Thomas Guillon", email="thomas.guillon@rte-france.com"},
    {name = "William Grison", email="william.grison@artelys.com"},
]
description = "ReLife is an open source Python library for asset management based on reliability theory and lifetime data analysis."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy >= 2.2.0",
    "scipy >= 1.15.0",
    "matplotlib >= 3.10.0",
    "typing_extensions >= 4.12.2",
]
[project.urls]
Homepage = "https://github.com/rte-france/relife"
Documentation = "http://opensource.rte-france.com/relife/"
Issues = "https://github.com/rte-france/relife/issues"


[tool.setuptools.packages.find] # project structure is "flat layout"
where = ["."] # current directory for flat layout
include = ["relife*"]  # ["*"] by default

[project.optional-dependencies]
dev = [
    "pytest >= 8.3.0",

    "nox >= 2024.10.0",
    "isort >= 6.0.0",
    "black >= 25.1.0",
    "pylint >= 3.3.0",
    "mypy >= 1.15.0",
    "mypy-extensions >= 1.0.0",
    "no-implicit-optional",
    "scipy-stubs", # needed to type hint scipy https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker
    "Sphinx >= 8.1.3",
    "pydata-sphinx-theme >= 0.16.1",
    "sphinx-copybutton >= 0.5.2",
    "sphinx_design >= 0.6.1",
    "numpydoc >= 1.8.0",
    "nbsphinx >= 0.9.7",
    "myst-parser >= 4.0.1",
    "jupyterlab >= 4.3.5",
]

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'

[tool.mypy]
plugins = "numpy.typing.mypy_plugin" # needed to type hing nympy

[[tool.mypy.overrides]]
module = [
    "relife/data/*",
    "relife/likelihood/*",
    "relife/policy/*",
    "relife/stochastic_process/*",
]
ignore_errors = true


[tool.pylint.format]
max-line-length = "88"
max-args = 10
disable = """
    line-too-long,
"""
ignored-modules = "scipy.special"

# pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rxXs"
# addopts = "-rxXs -k 'not test_ls_integrate[loglogistic]'"
testpaths = [
    "test/test_lifetime_model/",
    "test/test_stochastic_process",
    "test/test_likelihood",
    "test/data",
    "test/test_policy",
    "test/test_parametric_model.py",
    "test/test_quadrature.py",
    "test/test_economic.py",
    "test/test_stochastic_process",
]
