[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "relife"
version = "2.6.3"
description = "Package for optimizing infrastructure investment decisions in Python"
readme = "README.md"
authors = [
	{name = "Thomas Guillon", email="thomas.guillon@rte-france.com"},
]
maintainers = [
	{name = "William Grison", email="william.grison@rte-france.com"},
]
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "numpydoc>=1.10.0",
    "optype[numpy]>=0.17.0",
    "scipy>=1.17.1",
    "typing-extensions>=4.15.0",
]

[project.urls]
Homepage = "https://github.com/rte-france/relife"
Documentation = "http://opensource.rte-france.com/relife/"
Issues = "https://github.com/rte-france/relife/issues"

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "ipython>=9.10.0",
    "lifelines>=0.30.3",
    "matplotlib-stubs>=0.3.11",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "scipy-stubs>=1.17.1.2",
]
doc = [
    "jupyterlab>=4.5.6",
    "nbsphinx>=0.9.8",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=9.0.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"relife.data.csv" = ["*.csv"]
